--- a/index.css
+++ b/index.css
@@ -61,14 +61,10 @@ body {
     white-space: nowrap;
 }
 
-.quick-links p {
-    font-size: 15px;
-    font-weight: bold;
-    display: flex;
-    margin-bottom: 5px;
-    justify-content: center;
+.quick-links h4{
+    margin-left: 30px;
+    padding: 0;
 }
-
 
 .quick-links ul {
     display: flex;
@@ -96,6 +92,7 @@ body {
     padding: 10px;
     width: 130px;
     transition: .3s ease;
+    cursor: pointer;
 }
 
 .quick-links ul li a:hover{
@@ -147,36 +144,38 @@ body {
     text-align: center;
 }
 
-#request-overview table {
+#overview table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
 }
 
-#request-overview th, #request-overview td {
+#overview th, #overview td {
     border: 1px solid #ddd;
     padding: 8px;
-    text-align: left;
+    text-align: center;
 }
 
-#request-overview th {
+#overview th {
     background-color: #f2f2f2;
     font-weight: bold;
+    font-size: 12px;
 }
 
-#request-overview tr:nth-child(even) {
+#overview tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-#request-overview tr:hover {
+#overview tr:hover {
     background-color: #ddd;
 }
 
-#request-overview td {
+#overview td {
     padding: 10px;
+    font-size: 12px;
 }
 
-#request-overview p {
+#overview p {
     font-size: 15px;
     font-weight: bold;
     margin-bottom: 10px;
