--- a/index.css
+++ b/index.css
@@ -144,6 +144,25 @@ body {
     text-align: center;
 }
 
+.overviews .see-more {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(53, 154, 166);
+    color: #fff;
+    margin-top: 5px;
+    padding: 3px;
+    width: 20%;
+    margin-left: 80%;
+    border-radius: 10px;
+    transition: .3s ease;
+}
+.overviews .see-more:hover{
+    background-color: rgb(169, 168, 169);
+    color: #000000;
+}
+
 #overview table {
     width: 100%;
     border-collapse: collapse;
