--- a/index.css
+++ b/index.css
@@ -54,19 +54,87 @@ body {
     margin-top: 10px;
 }
 
+
 .quick-links {
+    width: 100%; 
+    text-align: center; 
+    background-color: #d6d6d6;
+    padding: 20px;
+}
+
+.quick-links h4 {
+    margin-bottom: 10px; 
+}
+
+.quick-links ul {
+    list-style-type: none; 
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center; 
+    gap: 100px;
+}
+
+.quick-links ul li {
+    width: 200px; 
+    height: 120px; 
+    text-align: center; 
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+}
+
+
+.quick-links ul li a {
+    font-size: 16px; 
+    font-weight: 550;
+    text-decoration: none;
+    color: #575454; 
+}
+
+
+.quick-links ul li i {
+    font-size: 24px; 
+    color: #333; 
+    margin-top: 5px;
+}
+
+
+.quick-links ul li p {
+    font-size: 14px;
+    color: #333;
+}
+
+.quick-links ul li:hover {
+    background-color: rgba(50, 124, 161, 0.9); 
+}
+
+.quick-links ul li:hover a, 
+.quick-links ul li:hover p, 
+.quick-links ul li:hover i {
+    color: white; 
+}
+
+
+/* .quick-links { */
     display: flex;
     flex-direction: column;
     overflow-x: auto; /* Enable horizontal scrolling */
     white-space: nowrap;
 }
 
-.quick-links h4{
+/* .quick-links h4{ */
     margin-left: 30px;
     padding: 0;
 }
 
-.quick-links ul {
+/* .quick-links ul { */
     display: flex;
     padding: 0;
     list-style: none; 
@@ -74,18 +142,18 @@ body {
     gap: 50px;
 }
 
-.quick-links li {
+/* .quick-links li { */
     flex: 1;
     text-align: center; 
 }
 
-.quick-links ul li a {
+/* .quick-links ul li a { */
     text-decoration: none;
     font-size: 15px;
     color: rgb(97, 97, 97);
 }
 
-.quick-links ul .fas.fa-file-alt{
+/* .quick-links ul .fas.fa-file-alt{ */
     background-color: rgb(53, 154, 166);
     border-radius: 10px;
     color: white;
@@ -95,16 +163,16 @@ body {
     cursor: pointer;
 }
 
-.quick-links ul li a:hover{
+/* .quick-links ul li a:hover{ */
     color: #000000;
 }
 
-.quick-links ul .fas.fa-file-alt:hover{
+/* .quick-links ul .fas.fa-file-alt:hover{ */
     background-color: #d3d3d3;
     color: black;
 }
 
-.quick-links, .request-overview, .history-overview{
+/* .quick-links, .request-overview, .history-overview{ */
     height: 120px;
     margin: 20px;
     padding: 15px;
@@ -114,7 +182,6 @@ body {
 
 
 .content .dashboard-body{
-    background-color: #e0e0e08f;
     margin: 10px;
     padding-top: 5px;
     border-radius: 10px;
@@ -129,7 +196,8 @@ body {
     display: flex; 
     gap: 20px;  
     justify-content: center;
-    margin: 20px;
+    padding: 20px;
+    background-color: #d6d6d6;
 }
 
 .overviews .column {
@@ -155,8 +223,9 @@ body {
     padding: 5px;
     padding-left:10px ;
     padding-right:10px ;
-    width: fit-content;
-    font-size: 15px;
+    width: 100px;
+    height: fit-content;
+    font-size: 10px;
     margin-left: 80%;
     border-radius: 10px;
     transition: .3s ease;
@@ -203,3 +272,162 @@ body {
     margin-bottom: 10px;
     text-align: center;
 }
+
+
+
+/* ------------------------------ sidebar -------------------------------*/
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(50, 124, 161, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+    z-index: 2;
+    margin: 2px;
+    border-radius: 5px;
+    padding-top: 60px;
+    outline: 3px solid #fff;
+}
+
+
+.sidebar-links{
+    padding-left: 5px;
+    margin-top: 20px;
+    flex-grow: 1;
+}
+
+.sidebar-links .logout {
+    display: flex;
+    align-items: center;
+    margin-top: auto;
+}
+
+.sidebar-links .help{
+    bottom: 1px;
+}
+
+.sidebar .sidebar-links a {
+    padding: 10px;
+    text-decoration: none;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    transition: 0.3s;
+    height: 50px;
+    margin-top: 5px;
+    border-radius: 10px 0 0 10px;
+    line-height: normal;
+}
+
+.sidebar .help, .logout {
+    padding: 10px;
+    text-decoration: none;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    transition: 0.3s;
+    height: 50px;
+    margin-top: 5px;
+    margin-left: 5px;
+    border-radius: 5px 0 0 5px;
+    line-height: normal;
+}
+
+.sidebar a .fas.fa-clock-rotate-left {
+    margin-right: 15px; 
+}
+
+.sidebar a .fas.fa-columns {
+    margin-right: 15px; 
+}
+
+.sidebar-links a:first-child {
+    background-color: #fff;
+    color: #333;
+}
+
+.sidebar a i {
+    margin-right: 10px;
+    font-size: 24px;
+    vertical-align: middle;
+}
+
+.sidebar a .link-text {
+    display: none;
+}
+
+.sidebar a:hover {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.toggle-btn {
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: transform 0.1s ease;
+    padding: 5px;
+    padding-left: 20px;
+    display: flex; 
+    align-items: center; 
+}
+
+.toggle-text {
+    margin-right: 10px; 
+    display: none; 
+    font-size: 12px; 
+}
+
+.sidebar.open .toggle-text {
+    display: inline;
+}
+
+.sidebar.open .toggle-btn i {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+}
+
+.sidebar.open .toggle-btn i {
+    transform: rotate(180deg); 
+    transition: transform 0.3s ease; 
+}
+
+.sidebar.open {
+    width: 250px;
+}
+
+.sidebar.open a .link-text {
+    display: inline;
+    margin-left: 10px;
+}
+
+.sidebar.open a i {
+    margin-right: 20px;
+}
+
+.sidebar.open ~ .content {
+    margin-left: 250px;
+}
+
+hr {
+    border: 1px solid #fff; 
+}
+
+
+
+
+
